correction version mobile

--- a/css/mona.css
+++ b/css/mona.css
@@ -409,10 +409,21 @@ blockquote {
         background: url("../img/line.png") repeat-y top;
     }  
     
+}
+
+#extra-mockups{
+    margin-bottom: 3em;
+}
+
+@media only screen and (max-width: 980px) {
+       
     #extra-mockups{
         display: none;
     }
 }
+
+
+
 
 /*    top: 1830.44px;
 left: -1032.62px;
